--- a/AppGestionEMS/Views/GrupoClases/Index.cshtml
+++ b/AppGestionEMS/Views/GrupoClases/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Crear nuevo grupo", "Create")
 </p>
 <table class="table">
     <tr>
