--- a/AppGestionEMS/Views/Shared/_Layout.cshtml
+++ b/AppGestionEMS/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Cursos", "Index", "Cursos")</li>
                     <li>@Html.ActionLink("Grupos", "Index", "GrupoClases")</li>
+                    <li>@Html.ActionLink("Asignacion Docente", "Index", "AsignacionDocentes")</li>
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                 </ul>
