--- a/AppGestionEMS/Views/Home/Index.cshtml
+++ b/AppGestionEMS/Views/Home/Index.cshtml
@@ -1,31 +1,40 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "ETSISI UPM - Inicio";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <img src="~/img/UPM.jpg" alt="Foto campus sur" style="max-width:100%" />
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Colaboraciones</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            La Escuela Técnica Superior de Ingeniería de Sistemas Informáticos (ETSISI) es un centro de la Universidad 
+            Politécnica de Madrid que imparte las ramas de la Ingeniería Informática, en concreto las titulaciones de 
+            Grado en Ingeniería de Software, Ingeniería de Computadores, Ingeniería de Sistemas de Información y 
+            Tecnologías para la Sociedad de la Información.
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Normativas</h2>
+        <p>
+            La Escuela Técnica Superior de Ingeniería de Sistemas Informáticos (ETSISI) es un centro de la Universidad
+            Politécnica de Madrid que imparte las ramas de la Ingeniería Informática, en concreto las titulaciones de
+            Grado en Ingeniería de Software, Ingeniería de Computadores, Ingeniería de Sistemas de Información y
+            Tecnologías para la Sociedad de la Información.
+        </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>El centro</h2>
+        <p>
+            La Escuela Técnica Superior de Ingeniería de Sistemas Informáticos (ETSISI) es un centro de la Universidad
+            Politécnica de Madrid que imparte las ramas de la Ingeniería Informática, en concreto las titulaciones de
+            Grado en Ingeniería de Software, Ingeniería de Computadores, Ingeniería de Sistemas de Información y
+            Tecnologías para la Sociedad de la Información.
+        </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
