--- a/AppGestionEMS/Views/Shared/_Layout.cshtml
+++ b/AppGestionEMS/Views/Shared/_Layout.cshtml
@@ -18,7 +18,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <!--@Html.ActionLink("Gestión EMS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })-->
+                    <img src='@Url.Content("~/img/index.png")' />
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -29,8 +30,8 @@
                     <li>@Html.ActionLink("Matriculas", "Index", "Matriculas")</li>
                     <li>@Html.ActionLink("Evaluaciones", "Index", "Evaluaciones")</li>
                     <li>@Html.ActionLink("Mis Evaluaciones", "Index", "MisEvaluaciones")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <!--<li>@Html.ActionLink("Acerca de", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>-->
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
